--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,14 @@ dev_dependencies:
   build_runner: ^2.4.8
   custom_lint: ^0.6.4
   riverpod_lint: ^2.3.10
+  flutter_launcher_icons: ^0.14.2
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_icon.png"
+  adaptive_icon_background: "#1a1a2e"
+  adaptive_icon_foreground: "assets/app_icon_foreground.png"
 
 flutter:
   uses-material-design: true
